force-app/main/default/objects/OA_Connector_Registry__mdt/OA_Connector_Registry__mdt.object-meta.xml
<CustomObject>
    <label>OA Connector Registry</label>
    <pluralLabel>OA Connector Registry</pluralLabel>
</CustomObject>