force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>