force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Connector_Class__c.field-meta.xml
<CustomField>
    <fullName>Connector_Class__c</fullName>
    <label>Connector Class</label>
    <length>120</length>
    <type>Text</type>
</CustomField>