force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Connector_Name__c.field-meta.xml
<CustomField>
    <fullName>Connector_Name__c</fullName>
    <label>Connector Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>