force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Dedupe_External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_External_Id_Field__c</fullName>
    <label>Dedupe External Id Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>