force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Mapper_Class__c.field-meta.xml
<CustomField>
    <fullName>Mapper_Class__c</fullName>
    <label>Mapper Class</label>
    <length>120</length>
    <type>Text</type>
</CustomField>