force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Owner_Steward__c.field-meta.xml
<CustomField>
    <fullName>Owner_Steward__c</fullName>
    <label>Owner Steward</label>
    <length>120</length>
    <type>Text</type>
</CustomField>