force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Parser_Class__c.field-meta.xml
<CustomField>
    <fullName>Parser_Class__c</fullName>
    <label>Parser Class</label>
    <length>120</length>
    <type>Text</type>
</CustomField>