force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Review_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Review Required</label>
    <type>Checkbox</type>
</CustomField>