force-app/main/default/objects/OA_Connector_Registry__mdt/fields/Staging_Object__c.field-meta.xml
<CustomField>
    <fullName>Staging_Object__c</fullName>
    <label>Staging Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>